--- a/MicrosoftGraphAspNetCoreConnectSample/appsettings.json
+++ b/MicrosoftGraphAspNetCoreConnectSample/appsettings.json
@@ -3,6 +3,7 @@
     "AzureAd": {
       "AADInstance": "https://login.microsoftonline.com/",
       "CallbackPath": "/signin-oidc",
+      "BaseUrl": "https://localhost:44334",
       "ClientId": "ENTER_YOUR_APP_ID",
       "ClientSecret": "ENTER_YOUR_SECRET", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
       "GraphResourceId": "https://graph.microsoft.com/"
