#1 Migrate to netcore2.0

--- a/MicrosoftGraphAspNetCoreConnectSample/appsettings.json
+++ b/MicrosoftGraphAspNetCoreConnectSample/appsettings.json
@@ -1,13 +1,11 @@
 {
-  "Authentication": {
-    "AzureAd": {
-      "AADInstance": "https://login.microsoftonline.com/",
-      "CallbackPath": "/signin-oidc",
-      "BaseUrl": "https://localhost:44334",
-      "ClientId": "ENTER_YOUR_APP_ID",
-      "ClientSecret": "ENTER_YOUR_SECRET", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
-      "GraphResourceId": "https://graph.microsoft.com/"
-    }
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "CallbackPath": "/signin-oidc",
+    "BaseUrl": "https://localhost:44334",
+    "ClientId": "ENTER_YOUR_APP_ID",
+    "ClientSecret": "ENTER_YOUR_SECRET", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
+    "GraphResourceId": "https://graph.microsoft.com/"
   },
   "Logging": {
     "IncludeScopes": false,
