#2 Migrate to MSAL
Upgrade to the new Microsoft Authentication Library (Azure AD v2)

--- a/MicrosoftGraphAspNetCoreConnectSample/appsettings.json
+++ b/MicrosoftGraphAspNetCoreConnectSample/appsettings.json
@@ -5,7 +5,9 @@
     "BaseUrl": "https://localhost:44334",
     "ClientId": "ENTER_YOUR_APP_ID",
     "ClientSecret": "ENTER_YOUR_SECRET", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
-    "GraphResourceId": "https://graph.microsoft.com/"
+    "Scopes": "openid email profile offline_access",
+    "GraphResourceId": "https://graph.microsoft.com/",
+    "GraphScopes": "User.Read User.ReadBasic.All Mail.Send"
   },
   "Logging": {
     "IncludeScopes": false,
